word break on full-width fix

--- a/projects/ng-components/src/assets/styles/list-view.css
+++ b/projects/ng-components/src/assets/styles/list-view.css
@@ -24,11 +24,11 @@
   }
 
   .list-view-th-full {
-    @apply w-full px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
+    @apply w-full px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider whitespace-normal break-all;
   }
 
   .list-view-th-half {
-    @apply w-full sm:w-1/2 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
+    @apply w-full sm:w-1/2 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider whitespace-normal break-all;
   }
 
   .list-view-tbody {
@@ -48,11 +48,11 @@
   }
 
   .list-view-td-full {
-    @apply w-full px-6 py-4 whitespace-nowrap;
+    @apply w-full px-6 py-4 whitespace-normal break-all;
   }
 
   .list-view-td-half {
-    @apply w-full sm:w-1/2 px-6 py-4 whitespace-nowrap;
+    @apply w-full sm:w-1/2 px-6 py-4 whitespace-normal break-all;
   }
 
   .details-button {
